lib/src/ffi/takumi.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Return a pointer to a NUL-terminated C string describing the most recent error.
///
/// ### Warning:
/// - The returned pointer is owned by Rust and remains valid until another FFI call
/// from this library updates the stored last error.
/// - The caller must not attempt to free or modify the returned pointer.
///
/// Returns:
/// - Pointer to a NUL-terminated C string containing the last error message.
/// - Returns NULL when there is no recorded error.
@ffi.Native<ffi.Pointer<ffi.Char> Function()>()
external ffi.Pointer<ffi.Char> takumi_last_error();

/// Create a new renderer and return an opaque handle.
///
/// This allocates and initializes a `Renderer` instance with default settings
/// (including a small resource cache and embedded fonts). The returned pointer
/// is opaque and must be freed with [takumi_renderer_free] when no longer needed.
///
/// ### Warning:
/// - The returned pointer is owned by the caller and must be passed to the
/// corresponding free function ([takumi_renderer_free]) exactly once.
/// - The pointer must not be shared between processes, and must not be used
/// after being freed.
///
/// Returns:
/// - Non-null pointer to an allocated `Renderer` on success.
/// - NULL is not expected for this constructor under normal conditions.
@ffi.Native<ffi.Pointer<Renderer> Function()>()
external ffi.Pointer<Renderer> takumi_renderer_new();

/// Frees a [Renderer] allocated with [takumi_renderer_new].
///
/// ### Warning:
/// - `ptr` must be a pointer returned by [takumi_renderer_new] and must not
/// have been freed already. Passing a null pointer is a no-op.
/// - After this call the pointer *__<u>must</u>__* not be used again.
@ffi.Native<ffi.Void Function(ffi.Pointer<Renderer>)>()
external void takumi_renderer_free(ffi.Pointer<Renderer> ptr);

/// This is just here to be compatible with the [NativeFinalizer].
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void takumi_renderer_free_void(ffi.Pointer<ffi.Void> ptr);

/// Store a persistent image in the renderer's persistent image store.
///
/// This writes a copy of [data] into the renderer's persistent image store under
/// the key specified by [src]. The image bytes are copied synchronously and the
/// function returns an integer status code to indicate success or failure.
///
/// Parameters:
/// - `ptr` must be a valid `Renderer` pointer from [takumi_renderer_new].
/// - `src` must be a valid NUL-terminated C string (UTF-8) pointing to the image key.
/// - `data` must point to `data_len` bytes of image data. If `data_len > 0`, `data` must not be NULL.
///
/// Returns:
/// - `0` on success.
/// - Non-zero error code on failure. Call [takumi_last_error] to get a human
/// readable error string when a non-zero code is returned.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<Renderer>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
  )
>()
external int takumi_renderer_put_persistent_image(
  ffi.Pointer<Renderer> ptr,
  ffi.Pointer<ffi.Char> src,
  ffi.Pointer<ffi.UnsignedChar> data,
  int data_len,
);

/// Load a font from an in-memory buffer into the renderer's font context.
///
/// The font bytes will be copied into the renderer and registered with optional
/// metadata. This allows the renderer to use custom fonts passed from the host.
///
/// Parameters:
/// - [ptr] must be a valid [Renderer] pointer from [takumi_renderer_new].
/// - [data] must point to [data_len] bytes containing a complete font file.
/// If `data_len > 0`, [data] must not be NULL.
/// - [name] is an optional NUL-terminated C string naming the font family.
/// - [weight] and [style] provide optional overrides; negative weight or
/// `u8::MAX` for style indicate "not provided".
///
/// Returns:
/// - `0` on success.
/// - Non-zero on failure; call [takumi_last_error] for details.
@ffi.Native<
  ffi.Int Function(
    ffi.Pointer<Renderer>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Double,
    ffi.Uint8,
  )
>()
external int takumi_renderer_load_font(
  ffi.Pointer<Renderer> ptr,
  ffi.Pointer<ffi.UnsignedChar> data,
  int data_len,
  ffi.Pointer<ffi.Char> name,
  double weight,
  int style,
);

/// Clear all entries from the renderer's persistent image store.
///
/// ### Warning:
/// - [ptr] must be a valid [Renderer] pointer or NULL. Passing NULL is a no-op.
@ffi.Native<ffi.Void Function(ffi.Pointer<Renderer>)>()
external void takumi_renderer_clear_image_store(ffi.Pointer<Renderer> ptr);

/// Purge the in-memory resource cache used by this renderer instance.
///
/// If resource caching was enabled for this renderer, this function will clear
/// any cached items (for example fetched images). It is safe to call from any
/// thread but will attempt to acquire the renderer lock.
///
/// ### Warning:
/// - [ptr] must be a valid [Renderer] pointer or NULL. Passing NULL is a no-op.
@ffi.Native<ffi.Void Function(ffi.Pointer<Renderer>)>()
external void takumi_renderer_purge_resource_cache(ffi.Pointer<Renderer> ptr);

/// Synchronously render an image described by JSON and return a malloc'd buffer.
///
/// The function blocks until rendering finishes. The rendered bytes are copied
/// into a newly allocated buffer using [libc::malloc]. The caller is responsible
/// for freeing the returned buffer by calling [takumi_free_buffer].
///
/// Parameters:
/// - [ptr] must be a valid `Renderer` pointer.
/// - [node_json] must point to [node_len] bytes containing a JSON object that
/// describes the root layout node. The JSON is parsed by the renderer.
/// - [options_json] must point to [options_len] bytes containing a JSON object
/// with rendering options (width, height, format, etc.).
/// - [out_len] is an out-pointer that will be written with the length of the
/// returned buffer on success, or 0 on error.
///
/// Returns:
/// - Pointer to a malloc'd buffer with image bytes on success (caller must free).
/// - NULL on error. Use [takumi_last_error] to obtain a description of the error.
@ffi.Native<
  ffi.Pointer<ffi.UnsignedChar> Function(
    ffi.Pointer<Renderer>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
    ffi.Pointer<ffi.UintPtr>,
  )
>()
external ffi.Pointer<ffi.UnsignedChar> takumi_renderer_render_sync(
  ffi.Pointer<Renderer> ptr,
  ffi.Pointer<ffi.UnsignedChar> node_json,
  int node_len,
  ffi.Pointer<ffi.UnsignedChar> options_json,
  int options_len,
  ffi.Pointer<ffi.UintPtr> out_len,
);

/// Start an asynchronous render task and return a numeric task handle.
///
/// The render is performed on a background thread. The returned task handle
/// can be polled with [takumi_poll_render_task] to check completion and obtain
/// the rendered bytes. The renderer stores an internal task map until the
/// caller polls and retrieves the result or frees the task via
/// [takumi_free_render_task].
///
/// Safety & Parameters:
/// - [ptr] must be a valid [Renderer] pointer.
/// - [node_json]/[node_len] and [options_json]/[options_len] are pointers to
/// JSON buffers described above for the synchronous API.
///
/// Returns:
/// - A non-zero u64 task handle on success.
/// - `0` on error. Use [takumi_last_error] for a human-readable error message.
@ffi.Native<
  ffi.Uint64 Function(
    ffi.Pointer<Renderer>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
  )
>()
external int takumi_renderer_render(
  ffi.Pointer<Renderer> ptr,
  ffi.Pointer<ffi.UnsignedChar> node_json,
  int node_len,
  ffi.Pointer<ffi.UnsignedChar> options_json,
  int options_len,
);

/// Poll an asynchronous render task and optionally retrieve its result buffer.
///
/// This checks the internal task map for [task_id]. If the task has completed
/// successfully, it returns a newly allocated buffer containing the rendered
/// bytes and removes the task from the map. If the task is still pending,
/// returns NULL and sets `out_status` to 0. On error, returns NULL and sets
/// [out_status] to 2.
///
/// Parameters:
/// - [task_id] must be a handle previously returned by `takumi_renderer_render`.
/// - [out_len] will receive the buffer length (0 for pending/error).
/// - [out_status] will receive the status code: 0=pending, 1=complete, 2=error.
///
/// Returns:
/// - Pointer to a malloc'd buffer with the result when status == 1 (caller frees it).
/// - NULL if the task is pending, errored, or not found.
@ffi.Native<
  ffi.Pointer<ffi.UnsignedChar> Function(
    ffi.Uint64,
    ffi.Pointer<ffi.UintPtr>,
    ffi.Pointer<ffi.Int>,
  )
>()
external ffi.Pointer<ffi.UnsignedChar> takumi_poll_render_task(
  int task_id,
  ffi.Pointer<ffi.UintPtr> out_len,
  ffi.Pointer<ffi.Int> out_status,
);

/// Free and drop any state associated with an asynchronous render task.
///
/// This will remove the task entry from the internal task map if present and
/// free any associated buffers. This function is idempotent: calling it for a
/// missing or already-cleared task is a no-op.
///
/// Parameters:
/// - [task_id]: handle previously returned by [takumi_renderer_render].
@ffi.Native<ffi.Void Function(ffi.Uint64)>()
external void takumi_free_render_task(int task_id);

/// Synchronously render an animation (multiple frames) described by JSON.
///
/// The frames JSON must be an array of objects containing a `node` (the node
/// description) and an optional `duration_ms`. The function renders all frames
/// and encodes them into the specified animation format (e.g. WebP/APNG). The
/// resulting bytes are returned in a malloc'd buffer which the caller must free
/// with [takumi_free_buffer].
///
/// Safety & Parameters:
/// - [ptr] must be a valid [Renderer] pointer.
/// - [frames_json]/[frames_len] must point to a JSON array of frames.
/// - [options_json]/[options_len] provide animation options (format, size, etc.).
/// - [out_len] receives the length of the returned buffer on success, or 0 on error.
///
/// Returns:
/// - Pointer to a malloc'd buffer with encoded animation bytes on success.
/// - NULL on error. Use [takumi_last_error] for details.
@ffi.Native<
  ffi.Pointer<ffi.UnsignedChar> Function(
    ffi.Pointer<Renderer>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
    ffi.Pointer<ffi.UintPtr>,
  )
>()
external ffi.Pointer<ffi.UnsignedChar> takumi_render_animation_sync(
  ffi.Pointer<Renderer> ptr,
  ffi.Pointer<ffi.UnsignedChar> frames_json,
  int frames_len,
  ffi.Pointer<ffi.UnsignedChar> options_json,
  int options_len,
  ffi.Pointer<ffi.UintPtr> out_len,
);

/// Start an asynchronous animation render and return a numeric task handle.
///
/// Works similarly to [takumi_renderer_render] but accepts an array of frames
/// to compose an animation. The returned task id can be polled with
/// [takumi_poll_render_task] to obtain the encoded animation bytes.
///
/// Parameters:
/// - [ptr] must be a valid [Renderer] pointer.
/// - [frames_json]/[frames_len] and [options_json]/[options_len] are pointers to
/// JSON buffers describing frames and animation options.
///
/// Returns:
/// - A non-zero u64 task handle on success.
/// - `0` on error. Use [takumi_last_error] for a description of the failure.
@ffi.Native<
  ffi.Uint64 Function(
    ffi.Pointer<Renderer>,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
    ffi.Pointer<ffi.UnsignedChar>,
    ffi.UintPtr,
  )
>()
external int takumi_render_animation(
  ffi.Pointer<Renderer> ptr,
  ffi.Pointer<ffi.UnsignedChar> frames_json,
  int frames_len,
  ffi.Pointer<ffi.UnsignedChar> options_json,
  int options_len,
);

/// Free a buffer that was allocated by this crate (via [libc::malloc]).
///
/// Parameters:
/// - [buf] must be a pointer previously returned by one of this crate's
/// functions (for example [takumi_renderer_render_sync], [takumi_poll_render_task],
/// or animation renderers) and allocated with [libc::malloc].
/// - Passing a NULL pointer is a no-op.
@ffi.Native<ffi.Void Function(ffi.Pointer<ffi.Void>)>()
external void takumi_free_buffer(ffi.Pointer<ffi.Void> buf);

final class Renderer extends ffi.Opaque {}
